--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,14 +1,16 @@
 name: Latest blog post workflow
-on:
+on: 
   schedule:
-    # Runs every hour
     - cron: '0 * * * *'
-jobs:
-  update-readme-with-blog:
+
+jobs: 
+  update-readme-with-blog: 
     name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
-    steps:
+    steps: 
       - uses: actions/checkout@v2
-      - uses: gautamkrishnar/blog-post-workflow@master
-        with:
-          feed_list: 'https://medium.com/feed/@bhavesh_jadhav'
+      - name: Update README
+        uses: gautamkrishnar/blog-post-workflow@master
+        with: 
+          max_post_count: "3"
+          feed_list: "https://medium.com/feed/@bhavesh_jadhav"
